--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
@@ -4,7 +4,7 @@
         <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.SPECIALITY'"></mat-label>
         <mat-select formControlName="speciality" (selectionChange)="sendAllFiltersOnFilterChange()" name="speciality">
             <mat-option *ngFor="let speciality of specialities" [value]="speciality.specialityId">
-                {{speciality.specialityDescription | translate}}
+                {{speciality.specialityDescription}}
             </mat-option>
         </mat-select>
         <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.speciality.value" matSuffix
@@ -17,7 +17,7 @@
         <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.PROFESSIONAL'"></mat-label>
         <mat-select formControlName="professional" (selectionChange)="sendAllFiltersOnFilterChange()" name="professional">
             <mat-option *ngFor="let professional of professionals" [value]="professional.professionalId">
-                {{professional.professionalDescription | translate}}
+                {{professional.professionalDescription}}
             </mat-option>
         </mat-select>
         <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.professional.value" matSuffix color="warn"
@@ -30,7 +30,7 @@
         <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.PROBLEM'"></mat-label>
         <mat-select formControlName="problem" (selectionChange)="sendAllFiltersOnFilterChange()" name="problem">
             <mat-option *ngFor="let problem of problems" [value]="problem.problemId">
-                {{problem.problemDescription | translate}}
+                {{problem.problemDescription}}
             </mat-option>
         </mat-select>
         <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.problem.value" matSuffix color="warn"
