--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -1,10 +1,21 @@
+@import '../../../../../../../assets/styles/mixins.scss';
+
+div.spinner {
+	@include centered-spinner;
+}
+
 ::ng-deep .mat-list .mat-list-item .mat-line{
-	Word-wrap: break-Word;
-   white-space: pre-wrap;
+    Word-wrap: break-Word;
+    white-space: pre-wrap;
 }
 
 ::ng-deep  .mat-list .mat-list-item{
 	height:initial!important;
+}
+
+.mat-list-item:hover {
+    background-color: #f3efef8e;
+    cursor: pointer;
 }
 
 .filter-panel{
