tg-1868 ajusta colores de número de día para mejorar contraste en turnos vista mensual

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -113,12 +113,12 @@
 
 		<ng-template #customCellTemplate let-day="day" let-locale="locale">
 			<div>
-				<span class="cal-day-number">
+				<span class="cal-day-number darker-color">
 					{{ day.date | calendarDate:'monthViewDayNumber':locale }}
 				</span>
 			</div>
 
-			<div class="turnos-cell">
+			<div class="daily-amounts">
 				<div fxLayout="column" fxLayoutGap="2px">
 
 					<div *ngIf="day.meta?.amount?.spontaneous != undefined" class="espontanea"
