--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -470,9 +470,10 @@
 	</section>
 
 	<section id="validations" class="doc-section"
-		*ngIf="!isValidConsultation()">
+		*ngIf="!isValidConsultation() || apiErrors.length > 0">
 		<mat-card>
 			<mat-error *ngFor="let error of errores" class="mat-body-2">{{ error | translate }}</mat-error>
+			<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
 		</mat-card>
 	</section>
 
