--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -287,9 +287,10 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="validations" *ngIf="mainDiagnosisError">
+		<section id="validations" *ngIf="mainDiagnosisError || apiErrors.length > 0">
 			<mat-card>
 				<mat-error class="mat-body-2">{{ mainDiagnosisError }}</mat-error>
+				<mat-error class="mat-body-2" *ngFor="let error of apiErrors">{{ error }}</mat-error>
 			</mat-card>
 		</section>
 		<section id="buttons" class="form-buttons">
