--- a/back-end/hospital-api/src/main/resources/templates/fragments/general.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/general.html
@@ -257,11 +257,16 @@
             &nbsp;&nbsp;&nbsp;&nbsp;<label th:if="${vitalSigns.respiratoryRate != null}" >Fecha de medición: </label>
             <strong><label  th:if="${vitalSigns.respiratoryRate != null}" th:text="${#temporals.format(vitalSigns.respiratoryRate.effectiveTime, 'dd-MM-yyyy HH:mm') + ' hs'}"></label></strong><br/>
 
-            - Tensión arterial:
-            <strong><label  th:if="${vitalSigns.systolicBloodPressure  == null}">Sin cambios registrados</label></strong>
+            - Tensión arterial (Sistolica/Diastolica):
+            <strong><label  th:if="${(vitalSigns.systolicBloodPressure == null) &&  (vitalSigns.diastolicBloodPressure == null)}">Sin cambios registrados</label></strong>
+
+            <strong><label  th:if="${(vitalSigns.systolicBloodPressure != null) &&  (vitalSigns.diastolicBloodPressure == null)}" th:text="${vitalSigns.systolicBloodPressure.value + '/- mm Hg'}"></label></strong>
+            <strong><label  th:if="${(vitalSigns.systolicBloodPressure == null) &&  (vitalSigns.diastolicBloodPressure != null)}" th:text="${'-/' + vitalSigns.diastolicBloodPressure.value + ' mm Hg'}"></label></strong>
             <strong><label  th:if="${(vitalSigns.systolicBloodPressure != null) &&  (vitalSigns.diastolicBloodPressure != null)}" th:text="${vitalSigns.systolicBloodPressure.value + '/' + vitalSigns.diastolicBloodPressure.value + ' mm Hg'}"></label></strong>
-            &nbsp;&nbsp;&nbsp;&nbsp;<label th:if="${vitalSigns.systolicBloodPressure != null}" >Fecha de medición: </label>
-            <strong><label  th:if="${vitalSigns.systolicBloodPressure != null}" th:text="${#temporals.format(vitalSigns.systolicBloodPressure.effectiveTime, 'dd-MM-yyyy HH:mm') + ' hs'}"></label></strong><br/>
+
+
+            &nbsp;&nbsp;&nbsp;<label th:if="${(vitalSigns.systolicBloodPressure != null) ||  (vitalSigns.diastolicBloodPressure != null)}" >Fecha de medición: </label>
+            <strong><label  th:if="${(vitalSigns.systolicBloodPressure != null) ||  (vitalSigns.diastolicBloodPressure != null)}" th:text="${#temporals.format(vitalSigns.systolicBloodPressure.effectiveTime, 'dd-MM-yyyy HH:mm') + ' hs'}"></label></strong><br/>
 
             - Temperatura corporal:
             <strong><label  th:if="${vitalSigns.temperature  == null}">Sin cambios registrados</label></strong>
