tg-1845 [FE] Impresion de turnos por dia

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
@@ -18,6 +18,10 @@
 	</mat-form-field>
 
 	<div class="actions" *ngIf="agendaSelected" fxLayout="row" fxLayoutGap="3px">
+		<button mat-flat-button color="primary" *hasRole="['ADMINISTRADOR_AGENDA']" id="print_agenda" name="print_agenda"
+		        (click)="printAgenda()">
+			<mat-icon>print</mat-icon>
+		</button>
 		<button mat-flat-button color="primary" *hasRole="['ADMINISTRADOR_AGENDA']" id="edit_agenda" name="edit_agenda"
 		        (click)="goToEditAgenda()">
 			<mat-icon>edit</mat-icon>
