tg-1847 faltan tildes en nueva agenda y asignacion de turnos

--- a/front-end/webapp/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
@@ -132,9 +132,9 @@
 			</section>
 
 			<section *ngIf="form.valid">
-				<h3 [translate]="'Dias y tipo de consulta'"></h3>
+				<h3 [translate]="'turnos.agenda-setup.SELECT_DAYS_TYPE'"></h3>
 				<div fxLayout="row">
-					<span [translate]="'Seleccione tipos de consulta para cada día'"></span>
+					<span [translate]="'turnos.agenda-setup.SELECT_DAYS_TYPE_SUBTITLE'"></span>
 				</div>
 
 				<ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
